namespace Generita.Domain.Models;

public class Category
{
    
}